RELEASE HISTORY OF THE "MALDIquantForeign" PACKAGE
==================================================

CHANGES IN MALDIquantForeign VERSION 0.11.1 [2017-09-13]:
---------------------------------------------------------

BUGFIX

* Fix handling of "processed" argument in `.writeImzMlDocument`; see #21.


CHANGES IN MALDIquantForeign VERSION 0.11 [2017-09-01]:
-------------------------------------------------------

BUGFIX

* Fix integer overflow in `.ibdOffsets`; see issue #20.
* Fix `exportImzMl` for missing coordinates, pixelSize and dimension; closes
* #20.

INTERNAL CHANGES

* Put MALDIquant into single quotes in the DESCRIPTION file.
* Rezip inst/compressed/csv.tar.gz using `gzip -n` to avoid lintian's
  package-contains-timestamped-gzip warning; see
  https://wiki.debian.org/ReproducibleBuilds for details.


CHANGES IN MALDIquantForeign VERSION 0.10 [2015-10-31]:
-------------------------------------------------------

IMPROVEMENTS

* Add parallel support on unix-based platforms using the parallel package.
  All `import*` functions support the "mc.cores" argument (default is 1, means
  no parallel import). Please read also `?"MALDIquantForeign-parallel"`.
* Add importer for .msd (mMass) files: `importMsd`.
* Add basic export support for imzML files: `exportImzMl`.
* `.importImzMl`: add "coordinates" argument to access specific spectra by
  their x, y coordinates within an imzML file; closes #14;
  affected functions: `import`, `importImzMl`.
  Thanks to Heath Patterson <heath.patterson@umontreal.ca> for this idea.

MODIFICATIONS

* Remove dependency "downloader". Since R 3.2.2 https is supported on all
  platforms by `base::download.file`.
* Use "verbose = interactive()" in `import`.
* Replace old imzML example files in inst/exampledata.
* `exportMzMl`: improve documentation of the "path" argument.
* `.importImzMl`: if the imzML file doesn't contain any UUID a warning is thrown
  instead of an error;
  affected functions: `import`, `importImzMl`.