@@ -1,6 +1,6 @@
 Package: MALDIquantForeign
 Version: 0.11.1
-Date: 2017-09-13
+Date: 2017-12-04
 Title: Import/Export Routines for 'MALDIquant'
 Authors@R: c(person("Sebastian", "Gibb", role=c("aut", "cre"),
         email="mail@sebastiangibb.de"), person("Pietro", "Franceschi",
